# esp-usb-bridge

./: .cz.toml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  astyle-rules.yml  check_copyright_config.yaml  launchpad.toml  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp_prog2  sdkconfig.esp32s2.defaults  sdkconfig.esp32s3.defaults  sdkconfig.jtag.defaults  sdkconfig.swd.defaults
.github/workflows/: dangerjs.yml  issue_comment.yml  launchpad.yml  new_issues.yml  new_prs.yml  pre_commit.yml  sync-jira.yml
components/DAP/: CMakeLists.txt
components/DAP/Config/: DAP_config.h
components/DAP/Include/: DAP.h
components/DAP/Source/: DAP.c
components/debug_probe/: CMakeLists.txt  debug_gpio.c  debug_gpio.h
components/platform/: CMakeLists.txt  compiler.h  esp_io.c  esp_io.h  xtensa_gcc.h
components/serial_handler/: CMakeLists.txt  serial_handler.c
components/util/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  esp_usb_jtag.c  eub_debug_probe.h  eub_swd.c  eub_vendord.c  eub_vendord.h  idf_component.yml  io.h  jtag.c  jtag.h  main.c  msc.c  msc.h  noflash.lf  serial.c  serial.h  usb_defs.h  util.c  util.h
main/public_include/: tusb_config.h
